--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
+    "@material-ui/core": "^4.4.3",
+    "@material-ui/pickers": "^3.2.6",
+    "@types/date-fns": "^2.6.0",
+    "cors": "^2.8.5",
+    "date-fns": "^2.4.1",
+    "moment": "^2.24.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-moment": "^0.9.2",
     "react-scripts": "3.1.2"
   },
   "scripts": {
